# Vouch-App

./: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  Dockerfile-relay  IDENTITY_ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  PHASE_5_DATA_LAYER.md  README.md  ROADMAP.md  SIGNAL_ARCHITECTURE.md  VOUCH_ARCHITECTURE.md  rust-toolchain.toml
.github/workflows/: ci.yml  nightly.yml
crates/vouch-core/: Cargo.toml
crates/vouch-core/src/: blob.rs  cbor.rs  claim.rs  database.rs  draft.rs  e2ee.rs  error.rs  fold.rs  keys.rs  lib.rs  peer.rs  profile.rs  rec.rs  storage.rs  store.rs  sync.rs  value.rs  writer.rs
crates/vouch-core/src/sync/: error.rs  notify.rs  protocol.rs  respond.rs  session.rs  state.rs
crates/vouch-core/tests/: database.rs  e2ee_flow.rs  fold.rs  media.rs  peer.rs  profile.rs  rec.rs  redaction.rs  retention.rs  robustness.rs  simulation.rs  sync_faults.rs  sync_notify.rs  sync_simulation.rs  vectors.rs
crates/vouch-node/: Cargo.toml
crates/vouch-node/src/: main.rs
crates/vouch-relay/: Cargo.toml
crates/vouch-relay-server/: Cargo.toml
crates/vouch-relay-server/src/: bridge.rs  main.rs  registry.rs
crates/vouch-relay/src/: main.rs
crates/vouch-store/: Cargo.toml
crates/vouch-store/src/: lib.rs
crates/vouch-store/tests/: persistence.rs
crates/vouch-transport/: Cargo.toml
crates/vouch-transport/src/: lib.rs
deploy/: Caddyfile  README.md  compose.yml
deploy/site/: index.html
scripts/: bundle-mac.sh  deploy-relay.sh  gui_mailbox_demo.sh  gui_sync_demo.sh  mailbox_demo.sh  sync_demo.sh
src/: app.rs  assets.rs  auto_update.rs  data.rs  debug_feed.rs  feed.rs  follows.rs  identity.rs  main.rs  theme.rs  ui.rs
src/ui/: debug_panel.rs  detail_panel.rs  feed_panel.rs  format.rs  modals.rs  record_card.rs  search_bar.rs  sidebar.rs
src/ui/modals/: add_follow.rs  edit_recommendation.rs  history.rs  new_recommendation.rs  welcome.rs
themes/: vouch.json
