[workspace]
members = ["crates/vouch-core", "crates/vouch-store", "crates/vouch-node", "crates/vouch-transport", "crates/vouch-relay-server"]

[package]
name = "vouch"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit"] }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }
rust-embed = "8"
serde_json = "1.0.148"
vouch-core = { path = "crates/vouch-core" }
vouch-store = { path = "crates/vouch-store" }
vouch-transport = { path = "crates/vouch-transport" }
futures = "0.3"
getrandom = "0.3"
dirs = "5"
env_logger = "0.11"

[dev-dependencies]
gpui = { git = "https://github.com/zed-industries/zed", features = ["test-support"] }
